force-app/main/default/force-app/main/default/objects/HVAC_Product_Spec__c/fields/HVAC_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Model_Number__c</fullName>
    <label>Model Number</label>
    <type>Text</type>
    <length>50</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>