force-app/main/default/force-app/main/default/objects/HVAC_Product_Spec__c/fields/HVAC_Product__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>HVAC Product Specs</relationshipLabel>
    <relationshipName>HVAC_Product_Specs</relationshipName>
</CustomField>