force-app/main/default/force-app/main/default/objects/HVAC_Product_Spec__c/fields/HVAC_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Tonnage__c</fullName>
    <label>Tonnage</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
</CustomField>